Add server administration and nutrition scanning feature switch
